# OpenModelica

./: Jenkinsfile
.CI/: Jenkinsfile.cpp  common.groovy
.CI/cmake/: Jenkinsfile.cmake.ubuntu.gcc.test
.CI/scripts/: SimulationRuntime-license-exceptions.txt  em-sccache-wrapper.sh
.devcontainer/: README.md
OMCompiler/: configure.ac
OMCompiler/Compiler/OpenModelica.rs/openmodelica_animation/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_animation/src/: dxf.rs  lib.rs  math.rs  scene.rs
OMCompiler/Compiler/OpenModelica.rs/openmodelica_animation/tests/: DoublePendulum_visual.xml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_modelica_utilities/: Cargo.toml
OMCompiler/Compiler/OpenModelica.rs/openmodelica_modelica_utilities/src/: lib.rs
OMCompiler/Examples/: BouncingBall.mo
OMEdit/OMEditGUI/: main.cpp
OMEdit/OMEditLIB/: CMakeLists.txt  MainWindow.cpp  OMEditApplication.cpp
testsuite/: rust-ignore-tests.txt
testsuite/omsimulator/: DualMassOscillator.mos  DualMassOscillator_cs.mos  DualMassOscillator_me.mos  Issue14456.mos  Issue_FMU_update_vars.mos  Modelica.Mechanics.MultiBody.Examples.Elementary.Pendulum.mos  cmakeFMU.mos  enumeration.mos  enumeration2.mos  enumeration3.mos  experimentAnnotation.mos  fmiBlackBox.mos  fmiProtected.mos  fmi_interpolate_cs.mos  initialization.mos  initialization2.mos  initialization2_omc.mos  initialization_omc.mos  outputState.mos  recompileFMU.mos  reset.mos  resetWithLoops.mos  setStartTime.mos  sinus.mos  testDirectionalDerivatives.mos  testLoopsOverFMUs.mos  whenTest.mos
(+241 files in other folders)
